# rustsible

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh
.cursor/rules/: rust.mdc
examples/: README.md  ad-hoc-examples.md
examples/inventory/: hosts
examples/playbooks/: test_all_features.yml  test_all_modules.yml  test_command.yml  test_lineinfile.yml  test_package.yml  test_service.yml  test_shell.yml  test_user.yml
examples/templates/: motd.j2
src/: cli.rs  lib.rs  main.rs
src/inventory/: host.rs  mod.rs  parser.rs
src/modules/: command.rs  copy.rs  debug.rs  file.rs  lineinfile.rs  local.rs  mod.rs  package.rs  param.rs  remote.rs  service.rs  shell.rs  template.rs  user.rs
src/playbook/: filters.rs  handlers.rs  mod.rs  parser.rs  play.rs  task.rs  templar.rs
src/ssh/: connection.rs
src/testing/: mod.rs
tests/: integration_tests.rs
tests/fixtures/inventory/: complex.ini  simple.ini  simple.yaml
tests/fixtures/playbooks/: complex.yml  simple.yml
