[package]
name = "rustsible"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "An Ansible-compatible automation tool written in Rust"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/yourusername/rustsible"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
async-trait = "0.1"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
thiserror = "2.0.12"
anyhow = "1.0"
tera = "1.20"
log = "0.4"
env_logger = "0.10"
yaml-rust = "0.4"
regex = "1.9"
tempfile = "3.8"
chrono = "0.4.41"
dirs = "6.0.0"
uuid = { version = "1.4", features = ["v4"] }
rayon = "1.7"
walkdir = "2.3"
colored = "3.0.0"
once_cell = "1.21.3"
itertools = "0.14.0"
sha-crypt = "0.5.0"
rand = "0.9.0"

[dev-dependencies]
pretty_assertions = "1.0"
